<resources>
    <string name="app_name">Sky Observer</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="month">Month:</string>

    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="sun">SUN</string>
    <string name="string_holder">string_holder</string>
    <string name="get_prices">Get Prices</string>
    <string name="loading_string">Loading</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="src_port">Source:</string>
    <string name="dst_port">Destination:</string>
    <string name="show_taxes_and_fees">Show prices with taxes and fees</string>
    <string name="failed_to_get_prices_message">Failed to get prices!!!</string>
    <string name="invalid_date_message">Invalid date!!!</string>
    <string name="day">Day:</string>
    <string name="outbound_date">Outbound date:</string>
    <string name="inbound_date">Inbound date:</string>
    <string name="find_flights">Find Flights</string>
    <string name="return_trip">Return trip</string>
    <string name="string_place_holder">String place holder</string>
    <string name="image_view_expand_collapse_string_place_holder">Expand</string>
    <string name="country_place_holder">Viet Nam</string>
    <string name="price_place_holder">from $50</string>
    <string name="image_view_destination_string_place_holder">Destination</string>
    <string name="sorting_order">Sorting Order</string>
    <string name="sorting_order_price_only_lowest">Price Only: Lowest first</string>
    <string name="sorting_order_price_only_highest">Price Only: Highest first</string>
    <string name="sorting_order_total_price_lowest">Total Price: Lowest first</string>
    <string name="sorting_order_total_price_highest">Total Price: Highest first</string>
    <string name="sorting_order_depart_earliest">Depart: Earliest first</string>
    <string name="sorting_order_depart_latest">Depart: Latest first</string>
    <string name="sorting_order_airlines">Airlines</string>
    <string name="best_price_from">From %s VND</string>
    <string name="date_cheapest_outbound_flight">%1$s: -> %2$s</string>
    <string name="date_cheapest_inbound_flight">%1$s: %2$s -></string>
    <string name="month_cheapest_outbound_flight">%1$s - %2$s: -> %3$s</string>
    <string name="month_cheapest_inbound_flight">%1$s - %2$s: %3$s -></string>
    <string name="best_price_date_place_holder">%1$d/%2$d/%3$d</string>

    <string name="trip_length">Trip length (days):</string>
    <string name="best_dates_item_month">%1$d - %2$d</string>
    <string name="best_dates_sub_item_date">%1$d - %2$d - %3$d</string>
</resources>
