<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/list_view_best_price_horizontal_spacing"
    android:paddingTop="@dimen/list_view_prices_vertical_spacing"
    android:paddingEnd="@dimen/list_view_best_price_horizontal_spacing"
    android:paddingBottom="@dimen/list_view_prices_vertical_spacing">

    <ImageView
        android:id="@+id/image_view_destination"
        android:layout_width="@dimen/image_view_destination_width"
        android:layout_height="@dimen/image_view_destination_height"
        android:contentDescription="@string/image_view_destination_string_place_holder"
        android:src="@mipmap/dst_img_place_holder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country_place_holder"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/image_view_destination"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_outbound_flight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/image_view_destination"
        app:layout_constraintTop_toBottomOf="@id/txt_destination"
        />

    <TextView
        android:id="@+id/txt_inbound_flight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/image_view_destination"
        app:layout_constraintTop_toBottomOf="@id/txt_outbound_flight"
        />

    <TextView
        android:id="@+id/txt_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/price_place_holder"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_inbound_flight" />

</android.support.constraint.ConstraintLayout>
