<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin"
    android:paddingEnd="@dimen/fragment_horizontal_margin">

    <TextView
        android:id="@+id/tv_src_port_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fragment_horizontal_margin"
        android:gravity="start|center_vertical"
        android:paddingStart="0dp"
        android:paddingTop="@dimen/fragment_vertical_margin"
        android:paddingEnd="@dimen/fragment_horizontal_margin"
        android:text="@string/src_port"
        app:layout_constraintEnd_toStartOf="@id/spinner_src_port"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_src_port"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/fragment_horizontal_margin"
        app:layout_constraintBottom_toBottomOf="@id/tv_src_port_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1.5"
        app:layout_constraintStart_toEndOf="@id/tv_src_port_label"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_outbound_date_label"
        style="@style/text_view_flight_direction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fragment_horizontal_margin"
        android:layout_marginEnd="@dimen/fragment_horizontal_margin"
        android:text="@string/outbound_date"
        app:layout_constraintTop_toBottomOf="@id/tv_src_port_label" />

    <TextView
        android:id="@+id/tv_outbound_edit_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fragment_horizontal_margin"
        android:gravity="start|center_vertical"
        android:paddingStart="@dimen/fragment_horizontal_margin"
        android:paddingEnd="0dp"
        android:text="@string/day"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/edit_text_date_outbound"
        app:layout_constraintEnd_toStartOf="@id/edit_text_date_outbound"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_outbound_date_label" />

    <EditText
        android:id="@+id/edit_text_date_outbound"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/fragment_horizontal_margin"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1.25"
        app:layout_constraintStart_toEndOf="@id/tv_outbound_edit_label"
        app:layout_constraintTop_toBottomOf="@id/tv_outbound_date_label" />

    <CheckBox
        android:id="@+id/chk_return_trip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fragment_horizontal_margin"
        android:layout_marginEnd="@dimen/fragment_horizontal_margin"
        android:checked="true"
        android:paddingStart="@dimen/fragment_horizontal_margin"
        android:paddingEnd="0dp"
        android:text="@string/return_trip"
        app:layout_constraintTop_toBottomOf="@id/edit_text_date_outbound" />

    <TextView
        android:id="@+id/tv_inbound_date_label"
        style="@style/text_view_flight_direction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fragment_horizontal_margin"
        android:layout_marginEnd="@dimen/fragment_horizontal_margin"
        android:text="@string/inbound_date"
        app:layout_constraintTop_toBottomOf="@id/chk_return_trip" />

    <TextView
        android:id="@+id/tv_inbound_edit_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fragment_horizontal_margin"
        android:gravity="start|center_vertical"
        android:paddingStart="@dimen/fragment_horizontal_margin"
        android:paddingEnd="0dp"
        android:text="@string/day"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/edit_text_date_inbound"
        app:layout_constraintEnd_toStartOf="@id/edit_text_date_inbound"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_inbound_date_label" />

    <EditText
        android:id="@+id/edit_text_date_inbound"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/fragment_horizontal_margin"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1.25"
        app:layout_constraintStart_toEndOf="@id/tv_inbound_edit_label"
        app:layout_constraintTop_toBottomOf="@id/tv_inbound_date_label" />

    <Button
        android:id="@+id/btn_find_flights"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/find_flights"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>
